fix weird gap in background color of the page

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,3 @@
 .App {
   text-align: center;
-  background-color: #D5DED9;
 }
